Dosage 1.13 (released xx.xx.2013)

Features:
- comics: Added comic strips AhoiPolloi, AxeCop, Bearmageddon, DeadWinter,
  HarkAVagrant, IAmArg, LoadingArtist, Nnewts, PHDComics, PokeyThePenguin,
  SnowFlame, WorldOfMrToast and Zwarwald.

Changes:
- cmdline: Comic lists are now displayed one page at a time.

Fixes:
- cmdline: Catch error when piping output to another
  program or file under Windows.
  Closes: GH bug #13
- comics: Retry download on empty content to reduce empty file errors.


Dosage 1.12 (released 4.3.2013)

Features:
- comics: Added comic strips AlphaLuna, AlphaLunaSpanish, BrentalFloss
  BrentalFlossFit, BrentalFlossGuest, DangerouslyChloe, MagickChicks,
  MenageA3, Namesake, ShadowGirls, StickyDillyBuns.

Fixes:
- cmdline: Fix option parsing for -l, --singlelist and --version.
  Closes: GH bug #10
- comics: Ensure the file is written to disk on save and detect
  empty files as an error.
  Closes: GH bug #11


Dosage 1.11 (released 1.3.2013)

Features:
- comics: Added comic strips Caggage, ManlyGuysDoingManlyThings,
  SandraAndWoo and SupernormalStep.

Changes:
- comics: Always use connection pooling when downloading pages or files.
- cmdline: Replace the deprecated argument parser optparse with argparse.
- installation: The Windows installer now adds a help entry to the start menu
  and has a flag to add dosage.exe to the PATH.

Fixes:
- comics: Correct the list of characters not to quote for URL path encoding.
  This fixes a lot of download errors of DrunkDuck comics.
- comics: Fixed a lot of comic strips (see git log for details).
  Closes: GH bug #8


Dosage 1.10 (released 10.2.2013)

Features:
- comics: Added comic strips SequentialArt, VampireCheerleader,
  GrrlPower, Spinnerette, HijinksEnsue, Nedroid, Antics, ChannelAte,
  ToonHole, ThisIsIndexed, WastedTalent, ChainsawSuit, ThreePanelSoul,
  SpaceTrawler, ScenesFromAMultiverse, BroodHollow, BoxerHockey,
  Wonderella, BadMachinery, TheBrads, FirstWorldProblems,