@@ -7,6 +7,7 @@ Features:
 
 Changes:
 - cmdline: Comic lists are now displayed one page at a time.
+- events: HTML output now embeds the images in the page.
 
 Fixes:
 - cmdline: Catch error when piping output to another
